# md2tree

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  run.py  sample.md  sample.pu
.github/workflows/: ci.yml
src/md2tree/: __init__.py  cli.py  md2tree.py
