[project]
name = "md2tree"
version = "0.1.0"
description = "Convert markdown to tree structure"
authors = [
    { name = "hy20191108", email = "zwwp9976@gmail.com" },
    { name = "take0x" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
md2tree = "md2tree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = ["mypy>=1.11.2", "ruff>=0.6.4"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/md2tree"]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
]
